// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRoleDataAccessTabComponent should display message on system role 1`] = `
<pf-user-role-data-access-tab
  currentRole$={[Function Observable]}
  dataTypes$={[Function Observable]}
  roleDataRestrictions$={[Function Observable]}
  store={[Function Store]}
>
  <div>
    
    <div>
      <h4>
        No data restrictions can be added to the Test Role role. If you would like to add data restrictions, please create a new user role.
      </h4>
    </div>
  </div>
</pf-user-role-data-access-tab>
`;

exports[`UserRoleDataAccessTabComponent should show data access tab on company role 1`] = `
<pf-user-role-data-access-tab
  currentRole$={[Function Observable]}
  dataTypes$={[Function Observable]}
  roleDataRestrictions$={[Function Observable]}
  store={[Function Store]}
>
  <div>
    
    <ul
      class="list-group nav"
    >
      
      <li
        class="nav-item nav-item parentElement"
      >
         Test Data type 
        
        <ul
          class="list-group nav"
        >
          
          <li
            class="nav-item nf subElement"
          >
            <pf-data-field-filter />
            
          </li>
        </ul>
      </li>
    </ul>
  </div>
</pf-user-role-data-access-tab>
`;
